[gd_scene load_steps=14 format=3 uid="uid://t5txmaafee64"]

[ext_resource type="Script" path="res://microjogos/godotware/Simon/Main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bskbp3a4ecnx0" path="res://microjogos/godotware/Simon/green.png" id="2"]
[ext_resource type="AudioStream" uid="uid://bc6b733pqqlyf" path="res://microjogos/godotware/Simon/red.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://udatap04gq7t" path="res://microjogos/godotware/Simon/green.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://jqqn6xng1rtd" path="res://microjogos/godotware/Simon/yellow.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://cu7apk8avk5w3" path="res://microjogos/godotware/Simon/443808__tissman__fail.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://do3s4e7la1xi8" path="res://microjogos/godotware/Simon/blue.png" id="7"]
[ext_resource type="AudioStream" uid="uid://1mwdma1tsbjc" path="res://microjogos/godotware/Simon/blue.wav" id="8"]
[ext_resource type="Texture2D" uid="uid://ccgars0g88igd" path="res://microjogos/godotware/Simon/yellow.png" id="9"]
[ext_resource type="Texture2D" uid="uid://d3p46q6uoty8g" path="res://microjogos/godotware/Simon/arrow.png" id="10"]
[ext_resource type="AudioStream" uid="uid://cmxsgo5g7yj07" path="res://microjogos/godotware/Simon/270333__littlerobotsoundfactory__jingle_win_00.wav" id="11"]
[ext_resource type="Texture2D" uid="uid://drgk5wpi1d4na" path="res://microjogos/godotware/Simon/red.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bp5ex36ka7p1w" path="res://microjogos/godotware/Simon/whitebg.png" id="13"]

[node name="Main" type="Node2D"]
position = Vector2(0, -10)
script = ExtResource("1")

[node name="Timer" type="Timer" parent="."]

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("13")
centered = false

[node name="Green" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2")
centered = false

[node name="Arrow" type="Sprite2D" parent="Green"]
position = Vector2(160, 100)
texture = ExtResource("10")

[node name="Red" type="Sprite2D" parent="."]
position = Vector2(320, -10)
texture = ExtResource("12")
centered = false

[node name="Arrow" type="Sprite2D" parent="Red"]
position = Vector2(160, 100)
rotation = 1.5708
texture = ExtResource("10")

[node name="Blue" type="Sprite2D" parent="."]
position = Vector2(0, 190)
texture = ExtResource("7")
centered = false

[node name="Arrow" type="Sprite2D" parent="Blue"]
position = Vector2(160, 80)
rotation = 4.71239
texture = ExtResource("10")

[node name="Yellow" type="Sprite2D" parent="."]
position = Vector2(320, 190)
texture = ExtResource("9")
centered = false

[node name="Arrow" type="Sprite2D" parent="Yellow"]
position = Vector2(160, 80)
rotation = 3.14159
texture = ExtResource("10")

[node name="GreenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="RedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[node name="BlueSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")

[node name="YellowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="Fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11")
